My first commit, comments code are exclude

--- a/Folio/index.html
+++ b/Folio/index.html
@@ -98,11 +98,11 @@
     <main class="main">
       <!-- Hero Section -->
       <section id="hero" class="hero section dark-background">
-        <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" />
+        <img src="assets/img/front-dp-3.JPG" alt="" data-aos="fade-in" />
 
-        <div class="container" data-aos="fade-up" data-aos-delay="100">
-          <h2>Charles Q. Neri<br /></h2>
-          <p>
+        <div class="container me-5 pe-5" data-aos="fade-up" data-aos-delay="100">
+          <h2 class="text-end" id="mynem">Charles Q. Neri<br /></h2>
+          <p class="text-end me-5 pe-5">
             I'm
             <span
               class="typed"
@@ -110,11 +110,11 @@
               >Freelancer</span
             >
           </p>
-          <div class="social-links">
-            <a href="#"><i class="bi bi-twitter-x"></i></a>
-            <a href="#"><i class="bi bi-facebook"></i></a>
-            <a href="#"><i class="bi bi-instagram"></i></a>
-            <a href="#"><i class="bi bi-linkedin"></i></a>
+          <div class="social-links text-end me-5 pe-5">
+          <!--    <a href="#"><i class="bi bi-twitter-x"></i></a>-->
+            <a href="https://www.facebook.com/charles.neri13"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/charles.neri13/"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/neri-charles-10775731b/"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
       </section>
@@ -183,7 +183,7 @@
         <!-- End Section Title -->
 
         <div class="container">
-          <div class="row gy-4">
+          <div class="row gy-4 pb-5 mb-5 m-1">
             <div
               class="col-lg-4 col-md-6 service-item d-flex"
               data-aos="fade-up"
@@ -249,7 +249,7 @@
       </section>
       <!-- /Services Section -->
       <!-- #region 
-      <!-- Testimonials Section 
+      Testimonials Section 
       <section id="testimonials" class="testimonials section light-background">
          Section Title 
         <div class="container section-title" data-aos="fade-up">
@@ -1102,16 +1102,13 @@
       <!-- /Contact Section -->
     </main>
 
-    <footer id="footer" class="footer light-background">
+    <footer id="footer" class="footer ">
       <div class="container">
-        <h3 class="sitename">Folio</h3>
-        <p>
-          Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni
-          eligendi fuga maxime saepe commodi placeat.
-        </p>
+     <!--   <h3 class="sitename">Folio</h3>-->
+       
         <div class="social-links d-flex justify-content-center">
-          <a href=""><i class="bi bi-twitter-x"></i></a>
-          <a href=""><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/charles.neri13/"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.facebook.com/charles.neri13"><i class="bi bi-facebook"></i></a>
           <a href="https://www.linkedin.com/in/neri-charles-10775731b/"><i class="bi bi-linkedin"></i></a>
         </div>
         <div class="container">
@@ -1124,7 +1121,9 @@
             <!-- You can delete the links only if you've purchased the pro version. -->
             <!-- Licensing information: https://bootstrapmade.com/license/ -->
             <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+         <span>  Credits for <a href="https://bootstrapmade.com/">BootstrapMade</a></span> <br>
+          <span> Modified by Charles Q. Neri</span>
+
           </div>
         </div>
       </div>
