--- a/Folio/index.html
+++ b/Folio/index.html
@@ -487,15 +487,15 @@
                       href="assets/img/portfolio/app-1.jpg"
                       title="App 1"
                       data-gallery="portfolio-gallery-app"
-                      class="glightbox preview-link"
+                      class="glightbox preview-link ms-4"
                       ><i class="bi bi-zoom-in"></i
                     ></a>
-                    <a
+                   <!-- <a
                       href="portfolio-details.html"
                       title="More Details"
                       class="details-link"
                       ><i class="bi bi-link-45deg"></i
-                    ></a>
+                    ></a>-->
                   </div>
                 </div>
               </div>
@@ -517,15 +517,15 @@
                       href="cerificates/cofe.png"
                       title="Product 1"
                       data-gallery="portfolio-gallery-product"
-                      class="glightbox preview-link"
+                      class="glightbox preview-link ms-4"
                       ><i class="bi bi-zoom-in"></i
                     ></a>
-                    <a
+                <!--    <a
                       href="portfolio-details.html"
                       title="More Details"
                       class="details-link"
                       ><i class="bi bi-link-45deg"></i
-                    ></a>
+                    ></a>-->
                   </div>
                 </div>
               </div>
@@ -607,15 +607,15 @@
                       href="cerificates/web-design.png"
                       title="App 2"
                       data-gallery="portfolio-gallery-app"
-                      class="glightbox preview-link"
+                      class="glightbox preview-link ms-4"
                       ><i class="bi bi-zoom-in"></i
                     ></a>
-                    <a
+              <!--      <a
                       href="portfolio-details.html"
                       title="More Details"
                       class="details-link"
                       ><i class="bi bi-link-45deg"></i
-                    ></a>
+                    ></a>-->
                   </div>
                 </div>
               </div>
@@ -637,15 +637,15 @@
                       href="assets/img/portfolio/product-2.jpg"
                       title="Product 2"
                       data-gallery="portfolio-gallery-product"
-                      class="glightbox preview-link"
+                      class="glightbox preview-link ms-4"
                       ><i class="bi bi-zoom-in"></i
                     ></a>
-                    <a
+                   <!-- <a
                       href="portfolio-details.html"
                       title="More Details"
                       class="details-link"
                       ><i class="bi bi-link-45deg"></i
-                    ></a>
+                    ></a>-->
                   </div>
                 </div>
               </div>
@@ -727,15 +727,15 @@
                       href="cerificates/DM001.png"
                       title="App 3"
                       data-gallery="portfolio-gallery-app"
-                      class="glightbox preview-link"
+                      class="glightbox preview-link ms-4"
                       ><i class="bi bi-zoom-in"></i
                     ></a>
-                    <a
+               <!--     <a
                       href="portfolio-details.html"
                       title="More Details"
                       class="details-link"
                       ><i class="bi bi-link-45deg"></i
-                    ></a>
+                    ></a>-->
                   </div>
                 </div>
               </div>
@@ -757,15 +757,15 @@
                       href="assets/img/portfolio/product-3.jpg"
                       title="Product 3"
                       data-gallery="portfolio-gallery-product"
-                      class="glightbox preview-link"
+                      class="glightbox preview-link ms-4"
                       ><i class="bi bi-zoom-in"></i
                     ></a>
-                    <a
+             <!--       <a
                       href="portfolio-details.html"
                       title="More Details"
                       class="details-link"
                       ><i class="bi bi-link-45deg"></i
-                    ></a>
+                    ></a>-->
                   </div>
                 </div>
               </div>
