--- a/Folio/index.html
+++ b/Folio/index.html
@@ -626,15 +626,15 @@
               >
                 <div class="portfolio-content h-100">
                   <img
-                    src="assets/img/portfolio/product-2.jpg"
+                    src="assets/img/invent.png"
                     class="img-fluid"
                     alt=""
                   />
                   <div class="portfolio-info">
-                    <h4>Product 2</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur</p>
+                    <a href="https://drive.google.com/drive/folders/1VuYMn1IqFhSOM6BshWQLBp_qG2fky_VX?usp=sharing"><h4>View me</h4></a>
+                    <p>Development of inventory system for the chosen organization. </p>
                     <a
-                      href="assets/img/portfolio/product-2.jpg"
+                      href="assets/img/invent.png"
                       title="Product 2"
                       data-gallery="portfolio-gallery-product"
                       class="glightbox preview-link ms-4"
@@ -745,17 +745,17 @@
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product"
               >
                 <div class="portfolio-content h-100">
-                  <img
-                    src="assets/img/portfolio/product-3.jpg"
+              a    <img
+                    src="assets/img/midtern-webport.png"
                     class="img-fluid"
                     alt=""
                   />
                   <div class="portfolio-info">
-                    <h4>Product 3</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur</p>
+                   <a href="https://www.figma.com/proto/BsZsoXzdeHnA0UeKWBffmI/web?node-id=1-2&p=f&t=aY0eDAgEPWEJkeeq-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A2"> <h4>View me</h4></a>
+                    <p>Prototyping my first website portfolio.</p>
                     <a
-                      href="assets/img/portfolio/product-3.jpg"
-                      title="Product 3"
+                      href="assets/img/midtern-webport.png"
+                      title="Project 3"
                       data-gallery="portfolio-gallery-product"
                       class="glightbox preview-link ms-4"
                       ><i class="bi bi-zoom-in"></i
