--- a/Folio/index.html
+++ b/Folio/index.html
@@ -484,8 +484,8 @@
                     <h4>Cert. 1</h4>
                     <p>Learn HTML in Sololearn</p>
                     <a
-                      href="assets/img/portfolio/app-1.jpg"
-                      title="App 1"
+                      href="cerificates/sololearn.png"
+                      title="Cert 1"
                       data-gallery="portfolio-gallery-app"
                       class="glightbox preview-link ms-4"
                       ><i class="bi bi-zoom-in"></i
@@ -605,9 +605,9 @@
                     <p>Learn responsive design with Freecodecamp</p>
                     <a
                       href="cerificates/web-design.png"
-                      title="App 2"
+                      title="Certificate 2"
                       data-gallery="portfolio-gallery-app"
-                      class="glightbox preview-link ms-4"
+                      class="glightbox preview-link ms-4 proj"
                       ><i class="bi bi-zoom-in"></i
                     ></a>
               <!--      <a
@@ -627,7 +627,7 @@
                 <div class="portfolio-content h-100">
                   <img
                     src="assets/img/invent.png"
-                    class="img-fluid"
+                    class="img-fluid proj"
                     alt=""
                   />
                   <div class="portfolio-info">
@@ -635,7 +635,7 @@
                     <p>Development of inventory system for the chosen organization. </p>
                     <a
                       href="assets/img/invent.png"
-                      title="Product 2"
+                      title="Project 2"
                       data-gallery="portfolio-gallery-product"
                       class="glightbox preview-link ms-4"
                       ><i class="bi bi-zoom-in"></i
@@ -725,7 +725,7 @@
                     <p>Learn Fundamental of Marketing with DICT</p>
                     <a
                       href="cerificates/DM001.png"
-                      title="App 3"
+                      title="Certificate 3"
                       data-gallery="portfolio-gallery-app"
                       class="glightbox preview-link ms-4"
                       ><i class="bi bi-zoom-in"></i
@@ -745,7 +745,7 @@
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product"
               >
                 <div class="portfolio-content h-100">
-              a    <img
+                 <img
                     src="assets/img/midtern-webport.png"
                     class="img-fluid"
                     alt=""
