--- a/Folio/index.html
+++ b/Folio/index.html
@@ -52,7 +52,7 @@
       <div
         class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between"
       >
-        <a href="index.html" class="logo d-flex align-items-center">
+        <a href="index.html" class="logo d-flex aligngit -items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <!-- <img src="assets/img/logo.png" alt=""> -->
         </a>
