--- a/web-portfolio/index.html
+++ b/web-portfolio/index.html
@@ -252,7 +252,7 @@
                 <div class="portfolio-content h-100">
                   <img
                     src="cerificates/sololearn.png"
-                    class="img-fluid"
+                    class="img-fluid certificates"
                     alt=""
                   />
                   <div class="portfolio-info">
@@ -276,7 +276,7 @@
                 <div class="portfolio-content h-100">
                   <img
                     src="cerificates/cofe.png"
-                    class="img-fluid"
+                    class="img-fluid certificates"
                     alt=""
                   />
                   <div class="portfolio-info">
@@ -302,7 +302,7 @@
                 <div class="portfolio-content h-100">
                   <img
                     src="cerificates/web-design.png"
-                    class="img-fluid"
+                    class="img-fluid certificates"
                     alt=""
                   />
                   <div class="portfolio-info">
@@ -326,7 +326,7 @@
                 <div class="portfolio-content h-100">
                   <img
                     src="assets/img/invent.png"
-                    class="img-fluid proj"
+                    class="img-fluid certificates"
                     alt=""
                   />
                   <div class="portfolio-info">
@@ -353,7 +353,7 @@
                 <div class="portfolio-content h-100">
                   <img
                     src="cerificates/DM001.png"
-                    class="img-fluid"
+                    class="img-fluid certificates"
                     alt=""
                   />
                   <div class="portfolio-info">
@@ -378,7 +378,7 @@
                 <div class="portfolio-content h-100">
                  <img
                     src="assets/img/midtern-webport.png"
-                    class="img-fluid"
+                    class="img-fluid certificates"
                     alt=""
                   />
                   <div class="portfolio-info">
