experimenting new style

--- a/web-portfolio/index.html
+++ b/web-portfolio/index.html
@@ -10,6 +10,10 @@
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon" />
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="
+https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css
+" rel="stylesheet">
+
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
@@ -50,12 +54,12 @@
         </a>
 
         <nav id="navmenu" class="navmenu">
+         
           <ul>
             <li><a href="#hero" class="active">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Skills</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-          
+            <li><a href="#portfolio">Portfolio</a></li>    
             <li><a href="#contact">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -69,8 +73,8 @@
         <img src="assets/img/front-dp-3.JPG" alt="" data-aos="fade-in" />
 
         <div class="container me-5 pe-5" data-aos="fade-up" data-aos-delay="100">
-          <h2 class="text-end" id="mynem">Charles Q. Neri<br /></h2>
-          <p class="text-end me-5 pe-5">
+          <h2 id="mynem">Charles Q. Neri<br /></h2>
+          <p >
             I'm
             <span
               class="typed"
@@ -78,11 +82,16 @@
               >Freelancer</span
             >
           </p>
-          <div class="social-links text-end me-5 pe-5">
+          <div class="social-links">
             <a href="https://www.facebook.com/charles.neri13"><i class="bi bi-facebook"></i></a>
             <a href="https://www.instagram.com/charles.neri13/"><i class="bi bi-instagram"></i></a>
             <a href="https://www.linkedin.com/in/neri-charles-10775731b/"><i class="bi bi-linkedin"></i></a>
+            <a href="https://github.com/charlesneri"><i class="bi bi-github"></i></a>
           </div>
+
+          <div class="cv-mode text-start d-flex ">
+          </div>
+          <button id="toggle-mode" ><i class="bi bi-moon-fill"></i></button>
         </div>
       </section>
       <!-- /Hero Section -->
@@ -330,7 +339,7 @@
                     alt=""
                   />
                   <div class="portfolio-info">
-                    <a href="https://drive.google.com/drive/folders/1VuYMn1IqFhSOM6BshWQLBp_qG2fky_VX?usp=sharing"><h4>View me</h4></a>
+                    <h4>Proj 2</h4>
                     <p>Development of inventory system for the chosen organization. </p>
                     <a
                       href="assets/img/invent.png"
@@ -531,6 +540,8 @@
           <a href="https://www.instagram.com/charles.neri13/"><i class="bi bi-instagram"></i></a>
           <a href="https://www.facebook.com/charles.neri13"><i class="bi bi-facebook"></i></a>
           <a href="https://www.linkedin.com/in/neri-charles-10775731b/"><i class="bi bi-linkedin"></i></a>
+          <a href="https://github.com/charlesneri"><i class="bi bi-github"></i></a>
+
         </div>
         <div class="container">
           <div class="copyright">
