--- a/web-portfolio/index.html
+++ b/web-portfolio/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Index - Folio Bootstrap Template</title>
+    <title>Charles Neri - Website Portfolio</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
@@ -89,10 +89,9 @@ https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css
             <a href="https://github.com/charlesneri"><i class="bi bi-github"></i></a>
           </div>
 
-          <div class="cv-mode text-start d-flex ">
-          </div>
-          <button id="toggle-mode" ><i class="bi bi-moon-fill"></i></button>
-        </div>
+         
+     
+      </div>
       </section>
       <!-- /Hero Section -->
 
