--- a/web-portfolio/index.html
+++ b/web-portfolio/index.html
@@ -130,8 +130,8 @@ https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css
                 <li>
                   <i class="bi bi-check2-all"></i>
                   <span
-                    ><b>Caraga State University</b><br />
-                    Bachelor of Science in Information Systems
+                    ><b>  Bachelor of Science in Information Systems</b><br />
+                    Caraga State University
                     <span id="indent" class="bi-indent"></span>
                     2022-Present</span
                   >
@@ -140,10 +140,10 @@ https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css
                   <i class="bi bi-check2-all"></i>
                   <span
                     ><b
-                      >Bartolome R. Luardo National 2019-2020 High School (Davao
-                      City)</b
-                    ><br />Technical Vocational Livelihood Information
-                    Communication Technology
+                      >Technical Vocational Livelihood Information
+                      Communication Technology</b
+                    ><br />Bartolome R. Luardo National 2019-2020 High School (Davao
+                    City)
                     <span class="bi-indent"> 2019-2020</span></span
                   >
                 </li>
